# GPUMemoryTest

./: CMakeLists.txt  Makefile  README.md  arrayMD.h  axpy.cu  axpy_datain.sh
